modified software Makefiles to use 151 library and unified per-program Makefiles

--- a/software/ac97_integration_tb/Makefile
+++ b/software/ac97_integration_tb/Makefile
@@ -1,4 +1,5 @@
+# Master Makefile dependencies
 TARGET := ac97_integration_tb
+INCLUDE_LIB := false
 
-#include ../Makefile.llvm.in
- include ../Makefile.gcc.in
+include ../Makefile.gcc.in
