--- a/software/tone_gen_test/Makefile
+++ b/software/tone_gen_test/Makefile
@@ -1,4 +1,5 @@
+# Master Makefile dependencies
 TARGET := tone_gen_test
+INCLUDE_LIB := true
 
-#include ../Makefile.llvm.in
- include ../Makefile.gcc.in
+include ../Makefile.gcc.in
