--- a/software/user_io_test/Makefile
+++ b/software/user_io_test/Makefile
@@ -1,4 +1,5 @@
+# Master Makefile dependencies
 TARGET := user_io_test
+INCLUDE_LIB := true
 
-#include ../Makefile.llvm.in
- include ../Makefile.gcc.in
+include ../Makefile.gcc.in
